--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "sprint"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 description = "Command runner"
 repository = "https://github.com/qtfkwk/sprint"
 license = "MIT"
 
 [dependencies]
+anyhow = "1.0.77"
 bunt = "0.2.8"
 rayon = "1.8.0"
 shlex = "1.2.0"
