--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sprint"
-version = "0.7.3"
+version = "0.8.0"
 edition = "2021"
 description = "Command runner"
 repository = "https://github.com/qtfkwk/sprint"
@@ -9,6 +9,9 @@ license = "MIT"
 [dependencies]
 anyhow = "1.0.86"
 clap = { version = "4.5.16", features = ["derive", "wrap_help"] }
+fhc = "0.7.1"
+glob = "0.3.1"
+notify = "6.1.1"
 owo-colors = { version = "4.0.0", features = ["supports-colors"] }
 rayon = "1.10.0"
 shlex = "1.3.0"
