--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,20 @@
 [package]
 name = "sprint"
-version = "0.10.2"
+version = "0.11.0"
 edition = "2021"
 description = "Command runner"
 repository = "https://github.com/qtfkwk/sprint"
 license = "MIT"
 
 [dependencies]
-anyhow = "1.0.86"
-clap = { version = "4.5.17", features = ["derive", "wrap_help"] }
-fhc = "0.7.1"
-ignore = "0.4.22"
+anstream = "0.6.17"
+anyhow = "1.0.91"
+clap = { version = "4.5.20", features = ["derive", "wrap_help"] }
+clap-cargo = "0.14.1"
+fhc = "0.8.0"
+ignore = "0.4.23"
 ignore-check = "0.2.0"
 notify = "6.1.1"
-owo-colors = { version = "4.0.0", features = ["supports-colors"] }
+owo-colors = "4.1.0"
 rayon = "1.10.0"
 shlex = "1.3.0"
